JobScheduler used read sms for Api level 24 and beyond

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,10 @@
                 <action android:name="custom.SMS_SERVICE" />
             </intent-filter>
         </service>
+        <service android:name=".service.SmsJobService"
+            android:exported="false"
+            android:enabled="true"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
 
     </application>
 
