--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChatActivity" />
 
         <receiver android:name=".broadcastReceivers.CallLogBroadcastReceiver">
             <intent-filter android:priority="23">
