Date and Time is added to DetailNotificationFragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver android:name=".broadcastReceivers.CallLogBroadcastReceiver">
             <intent-filter android:priority="23">
                 <action android:name="android.intent.action.PHONE_STATE" />
@@ -48,6 +49,7 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
                 <action android:name="technology.nine.mobile_tracker.SMS_SERVICE" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
@@ -75,6 +77,11 @@
 
             </intent-filter>
         </service>
+        <service
+            android:name=".service.IncomingSmsService"
+            android:enabled="true"
+            android:exported="true"
+            android:stopWithTask="false" />
 
     </application>
 
