JobScheduler is used to read sent sms in android Nougat and above

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,25 @@
     <uses-permission android:name="android.permission.WRITE_SMS" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <receiver android:name=".broadcastReceivers.CallLogBroadcastReceiver">
@@ -77,15 +82,19 @@
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="false" />
-        <activity android:name=".SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <service
+            android:name=".service.SmsJobServices"
+            android:permission="android.permission.BIND_JOB_SERVICE">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
+        </service>
+
+        <activity android:name=".SplashActivity">
+
         </activity>
-        <activity android:name=".PatternLockActivity"
-            android:label="Choose your pattern"/>
+        <activity
+            android:name=".PatternLockActivity"
+            android:label="Choose your pattern" />
     </application>
 
 </manifest>
