pattern  activity changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,8 @@
         </activity>
         <activity
             android:name=".PatternLockActivity"
-            android:label="Choose your pattern" />
+            android:label="Choose your pattern"
+            />
     </application>
 
 </manifest>
